// Vitest Snapshot v1

exports[`tab > Should render multiple block 1`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"1\\">ts</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div><div class=\\"tabs-tab-content\\"><pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should render multiple block 2`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"1\\">ts</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div><div class=\\"tabs-tab-content\\"><pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should render single block 1`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should render single block 2`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support active 1`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button active\\" data-tab=\\"0\\" data-active>js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content active\\" data-active=\\"\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support active 2`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button active\\" data-tab=\\"0\\" data-active>js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content active\\" data-active=\\"\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support active 3`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
    <button type=\\"button\\" class=\\"tabs-tab-button active\\" data-tab=\\"1\\" data-active>ts</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div><div class=\\"tabs-tab-content active\\" data-active=\\"\\"><pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support active 4`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
    <button type=\\"button\\" class=\\"tabs-tab-button active\\" data-tab=\\"1\\" data-active>ts</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div><div class=\\"tabs-tab-content active\\" data-active=\\"\\"><pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support tabs id 1`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support tabs id 2`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support tabs id 3`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > Should support tabs id 4`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button\\" data-tab=\\"0\\">js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > should ignore other items 1`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button active\\" data-tab=\\"0\\" data-active>js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content active\\" data-active=\\"\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;

exports[`tab > should ignore other items 2`] = `
"<div class=\\"tabs-tabs-wrapper\\">
  <div class=\\"tabs-tabs-header\\">
    <button type=\\"button\\" class=\\"tabs-tab-button active\\" data-tab=\\"0\\" data-active>js</button>
  </div>
  <div class=\\"tabs-tabs-container\\">
<div class=\\"tabs-tab-content active\\" data-active=\\"\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</div>
  </div>
</div>"
`;
